<resources>
    <string name="app_name">BackupBro</string>
    <string name="edit_username">Enter Username</string>
    <string name="hint_email">Enter Your Email Address</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="hint_username">Enter Your Username</string>
    <string name="create_profile_button">Create Profile</string>
    <string name="login_button">Sign In</string>
    <string name="login_page_button">Already Have An Account? Click Here To Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_page_button">Forgot Your Password? Click Here to Reset It</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_page_button">Don\'t Have An Account? Click Here To Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_invalid_username">Invalid username</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
