<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/login_input_email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/login_input_password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/signup_page_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_page_button"
        android:background="@null"
        android:layout_marginTop="3dp"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/reset_password_page_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_page_button"
        android:background="@null"
        android:layout_marginTop="3dp"
        android:textColor="#000000"/>
</LinearLayout>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".LoginActivity">-->

<!--</android.support.constraint.ConstraintLayout>-->

<!--<LinearLayout-->
<!--xmlns:android="https://schemas.android.com/apk/res/android"-->
<!--android:background="@color/bg_login"-->
<!--android:gravity="center"-->
<!--android:orientation="vertical"-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:scrollbars="vertical"-->
<!--android:fillViewport="true"-->
<!--android:paddingLeft="20dp"-->
<!--android:paddingRight="20dp" >-->
<!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/login_input_layout_email"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--<EditText-->
        <!--android:id="@+id/login_input_email"-->
        <!--android:textColor="#000000"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textEmailAddress"-->
        <!--android:hint="@string/hint_email" />-->
<!--</android.support.design.widget.TextInputLayout>-->
<!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/login_input_layout_password"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--<EditText-->
        <!--android:id="@+id/login_input_password"-->
        <!--android:textColor="#000000"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textPassword"-->
        <!--android:hint="@string/hint_password" />-->
<!--</android.support.design.widget.TextInputLayout>-->
<!--<Button android:id="@+id/btn_login"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/btn_login"-->
    <!--android:background="@color/login_button_background"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:textColor="@android:color/white"/>-->
<!--<Button android:id="@+id/btn_link_signup"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/btn_link_signup"-->
    <!--android:background="@null"-->
    <!--android:layout_marginTop="3dp"-->
    <!--android:textColor="@android:color/black"/>-->
<!--</LinearLayout>-->